# zug-zug

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci-linux.yml  ci-windows.yml  cmake.yml
cmake/: ProjectSources.cmake  Tests.cmake  ThirdPartyDependencies.cmake
documentation/: index.md  specification.md
src/: main.cpp
src/scripts/lua/: runtime.cpp  runtime.hpp  sol2.hpp  utils.cpp  utils.hpp
src/strataGGus/: strataGGus.cpp  strataGGus.hpp
src/utils/: enum_set.hpp  filesystem.hpp  optional_ref.hpp
src/zug-zug/: zug-zug.cpp  zug-zug.hpp
tests/: dummy.cpp
tests/utils/: test_filesystem.cpp
tests/zug-zug/: test_luaSandboxes.cpp  test_luaSandboxes_fs.cpp
tests/zug-zug/scripts/lua/: test_limitedAlloc.cpp  test_sandbox_fs.cpp  test_sandbox_libs.cpp  test_timeoutGuard.cpp
